Fix: Expand valuation header image to full width on mobile devices - set img width to 100% in .valuation-header

--- a/fengdie-landing-page-master/fengdie-landing-page-master/src/Home/static/home.less
+++ b/fengdie-landing-page-master/fengdie-landing-page-master/src/Home/static/home.less
@@ -162,6 +162,10 @@
       flex-direction: column;
       align-items: center;
       gap: 16px;
+          img {
+      width: 100%;
+      height: auto;
+    }
     }
     .valuation-header a {
       display: block;
